#4972#, #4656# multilingual form element and submission checklist grid
Merge branch 'submissionChecklist'

* submissionChecklist:
  whitespace and other small fixes
  #4972# all locale textarea inputs displayed at once with FBV vocab
  submissionChecklist grid locale changes

--- a/locale/en_US/grid.xml
+++ b/locale/en_US/grid.xml
@@ -36,12 +36,16 @@
 
 	<!-- Contributor Grid -->
 	<message key="grid.contributor.title">Contributor</message>
-	
+
 	<!-- Library Files -->
-	<message key="grid.libraryFiles.column.files">Files</message>	
+	<message key="grid.libraryFiles.column.files">Files</message>
 	<message key="grid.libraryFiles.submission.title">Submission Library</message>
-	<message key="grid.libraryFiles.editorial.title">Editorial Library</message>	
+	<message key="grid.libraryFiles.editorial.title">Editorial Library</message>
 	<message key="grid.libraryFiles.review.title">Review Library</message>
 	<message key="grid.libraryFiles.production.title">Production Library</message>
-	<message key="grid.libraryFiles.productionTemplate.title">Production Template Library</message>			
+	<message key="grid.libraryFiles.productionTemplate.title">Production Template Library</message>
+
+	<!-- SubmissionChecklist -->
+	<message key="grid.submissionChecklist.title">Submission Checklist</message>
+	<message key="grid.submissionChecklist.column.checklistItem">Checklist Item</message>
 </locale>
