*5158* http://github.com/jerico-dev/pkp-lib/blob/aaf23b0ed6e25672f912a0a372269eda3e444a2d/classes/db/DAO.inc.php - several small bug fixes

--- a/locale/en_US/submission.xml
+++ b/locale/en_US/submission.xml
@@ -36,6 +36,7 @@
 	<message key="submission.citations.form.title">Edit Citation</message>
 	<message key="submission.citations.form.loadMessage">Please wait for the citation editor to load.</message>
 	<message key="submission.citations.form.description">Please manually improve the citation then try re-validating it.</message>
+	<message key="submission.citations.form.filterError">The parse or lookup operation did not return any results. Maybe you can try to edit the citation text manually to improve results?</message>
 	<message key="submission.citations.output.unsupportedPublicationType">Unsupported or missing publication type.</message>
 	<message key="submission.citations.output.exportDescription">Please copy the content of this dialog window and paste it into your document.</message>
 	<!-- FIXME: move to meta-data plug-in -->
