--- a/locale/en_US/grid.xml
+++ b/locale/en_US/grid.xml
@@ -21,6 +21,7 @@
 	<message key="grid.action.addItem">Add Item</message>
 	<message key="grid.action.delete">Delete</message>
 	<message key="grid.action.edit">Edit</message>
+	<message key="grid.action.restoreDefaults">Restore Defaults</message>
 
 	<!-- Common Grid Column Titles -->
 	<message key="grid.columns.actions">Actions</message>
@@ -36,6 +37,12 @@
 
 	<!-- Contributor Grid -->
 	<message key="grid.contributor.title">Contributor</message>
+
+	<!-- Review Forms Grid -->
+	<message key="grid.reviewForm.title">Review Forms</message>
+
+	<!-- Book File Types Grid -->
+	<message key="grid.bookFileType.form.sortable">Allow files of this type to be sorted by component (e.g. by chapter)</message>
 
 	<!-- Library Files -->
 	<message key="grid.libraryFiles.column.files">Files</message>
