#5121# update it_IT locale files

--- a/locale/it_IT/admin.xml
+++ b/locale/it_IT/admin.xml
@@ -4,12 +4,12 @@
 <!--
   * locale/it_IT/admin.xml
   *
-  * Copyright (c) 2000-2010 John Willinsky
+  * Copyright (c) 2000-2009 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the it_IT (Italiano) locale.
   *
-  * $Id$
+  * $Id: admin.xml,v 1.4 2009/12/08 04:19:13 jmacgreg Exp $
   -->
 
 <locale name="it_IT" full_name = "Italiano">
