--- a/locale/it_IT/countries.xml
+++ b/locale/it_IT/countries.xml
@@ -3,12 +3,12 @@
 <!--
   * locale/it_IT/countries.xml
   *
-  * Copyright (c) 2000-2010 John Willinsky
+  * Copyright (c) 2000-2009 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localized list of countries.
   *
-  * $Id$
+  * $Id: countries.xml,v 1.4 2009/08/18 23:44:09 asmecher Exp $
   -->
 <countries>
 	<country name="Afghanistan" code="AF"/>
