--- a/locale/it_IT/currencies.xml
+++ b/locale/it_IT/currencies.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE currencies SYSTEM "../../dtd/currencies.dtd">
 
 <!--
   * currencies.xml
   *
-  * Copyright (c) 2000-2010 John Willinsky
+  * Copyright (c) 2003-2009 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localized list of currencies.
   *
-  * $Id$
+  * $Id: currencies.xml,v 1.6 2009/12/08 04:19:13 jmacgreg Exp $
   -->
+
+<!DOCTYPE currencies [
+	<!ELEMENT currencies (currency+)>
+		<!ATTLIST currencies
+			locale CDATA #REQUIRED>
+	<!ELEMENT currency EMPTY>
+		<!ATTLIST currency
+			code_alpha CDATA #REQUIRED
+			code_numeric CDATA #REQUIRED
+			name CDATA #REQUIRED>
+]>
 
 <currencies locale="it_IT">
 	<currency name="Afgani" code_alpha="AFN" code_numeric="971" />
