--- a/locale/it_IT/submission.xml
+++ b/locale/it_IT/submission.xml
@@ -4,16 +4,15 @@
 <!--
   * locale/it_IT/submission.xml
   *
-  * Copyright (c) 2000-2010 John Willinsky
+  * Copyright (c) 2000-2009 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the it_IT (Italiano) locale.
   *
-  * $Id$
+  * $Id: submission.xml,v 1.4 2009/12/08 04:19:13 jmacgreg Exp $
   -->
 
 <locale name="it_IT" full_name = "Italiano">
-	<message key="submission.agencies">Organizzazioni</message>
 	<message key="submission.abstractViews">Viste dell'Abstract</message>
 	<message key="submission.accepted">Accetta</message>
 	<message key="submission.acknowledge">Ringraziamenti</message>
