--- a/locale/en_US/submission.xml
+++ b/locale/en_US/submission.xml
@@ -216,6 +216,8 @@
 	<message key="submission.summary">Summary</message>
 	<message key="submission.supplementaryFiles">Supplementary Files</message>
 	<message key="submission.supportingAgencies">Supporting Agencies</message>
+	<message key="submission.currentAgencies">Current Agencies</message>
+	<message key="submission.indexingInformation">Indexing Information</message>
 	<message key="submission.titleAndAbstract">Title and Abstract</message>
 	<message key="submission.underway">Underway</message>
 	<message key="submission.uploadFileTo">Upload file to</message>
