--- a/locale/en_US/submission.xml
+++ b/locale/en_US/submission.xml
@@ -225,6 +225,7 @@
 	<message key="submission.views">Views</message>
 	<message key="submission.uploadSuccessful">Your file has been uploaded.  Press continue to edit the file's metadata.</message>
 	<message key="submission.loadMessage">Please wait while your file is uploaded to the server.</message>
+	<message key="submission.fileDetails">File Details</message>
 
 	<!-- Author Submission -->
 	<message key="author.submit.submissionCitations">Provide a formatted list of references for works cited in this submission.</message>
