*5163* Citation editor: Remove parse and lookup button from editor

--- a/locale/en_US/submission.xml
+++ b/locale/en_US/submission.xml
@@ -30,14 +30,16 @@
 	<message key="submission.citations.grid.title">Edit Citations</message>
 	<message key="submission.citations.grid.importCitations">Import Citations</message>
 	<message key="submission.citations.grid.exportCitations">Export Citations</message>
-	<message key="submission.citations.grid.parseCitation">Parse</message>
-	<message key="submission.citations.grid.lookupCitation">Lookup</message>
+	<message key="submission.citations.grid.editCheckCitation">Edit/Check</message>
+	<message key="submission.citations.grid.checkCitationAgain">Check Again</message>
 	<message key="submission.citations.grid.editedCitation">Citation Text</message>
 	<message key="submission.citations.grid.editedCitationRequired">A citation text is required.</message>
+	<message key="submission.citations.grid.publicationTypeRequired">Please make sure that you always set a publication type. Currently supported values are book (for books or book chapters) and journal (for journal articles). Otherwise the citation output formatting will not work correctly.</message>
 	<message key="submission.citations.grid.errorDeletingCitation">An error occurred while trying to delete the citation.</message>
 	<message key="submission.citations.form.title">Edit Citation</message>
 	<message key="submission.citations.form.loadMessage">Please wait for the citation editor to load.</message>
-	<message key="submission.citations.form.description">Please manually improve the citation then try re-validating it.</message>
+	<message key="submission.citations.form.description">If you did not get satisfactory results by checking the original citation then you can manually improve the citation by editing the fields and then re-checking it.</message>
+	<message key="submission.citations.form.unsavedChanges">The citation contains data from external databases that are yet unsaved. Please review and/or edit the data fields and then either click "Ok" to save them or "Cancel" to undo the changes.</message>
 	<message key="submission.citations.form.filterError">The parse or lookup operation did not return any results. Maybe you can try to edit the citation text manually to improve results?</message>
 	<message key="submission.citations.output.unsupportedPublicationType">Unsupported or missing publication type. Please manually edit the citation and enter a publication type (either 'book' or 'journal').</message>
 	<message key="submission.citations.output.exportDescription">Please copy the content of this dialog window and paste it into your document.</message>
