--- a/locale/en_US/submission.xml
+++ b/locale/en_US/submission.xml
@@ -227,9 +227,11 @@
 	<message key="submission.uploadFileTo">Upload file to</message>
 	<message key="submission.viewMetadata">View Metadata</message>
 	<message key="submission.views">Views</message>
-	<message key="submission.uploadSuccessful">Your file has been uploaded.  Press continue to edit the file's metadata.</message>
+	<message key="submission.uploadSuccessful">Your file has been uploaded.</message>
+	<message key="submission.uploadSuccessfulContinue">Your file has been uploaded.  Press continue to edit the file's metadata.</message>
 	<message key="submission.loadMessage">Please wait while your file is uploaded to the server.</message>
 	<message key="submission.fileDetails">File Details</message>
+	<message key="submission.nameRequired">A name is required for this item.</message>
 
 	<!-- Author Submission -->
 	<message key="author.submit.submissionCitations">Provide a formatted list of references for works cited in this submission.</message>
