--- a/locale/en_US/grid.xml
+++ b/locale/en_US/grid.xml
@@ -75,11 +75,11 @@
 	<message key="grid.submissionChecklist.column.checklistItem">Checklist Item</message>
 
 	<!-- Submission Contributors -->
-	<message key="author.submit.contributor.name">Name</message>
-	<message key="author.submit.contributor.email">E-mail</message>
-	<message key="author.submit.contributor.role">Role</message>
-	<message key="author.submit.contributor.principalContact">Primary Contact</message>
-	
+	<message key="author.users.contributor.name">Name</message>
+	<message key="author.users.contributor.email">E-mail</message>
+	<message key="author.users.contributor.role">Role</message>
+	<message key="author.users.contributor.principalContact">Primary Contact</message>
+
 	<!-- Chapters -->
 	<message key="grid.chapters.title">Chapters</message>
 </locale>
